--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,55 @@
+* {
+  box-sizing: border-box;
+}
+
 html, body  {
   margin: 0;
   padding: 0;
+
+  --site-max-width: 1680px;
 }
 
+/**
+TODO: remove these css
+ */
 body * {
-  outline: 1px solid red;
+  outline: 1px solid #9e9e9e;
+}
+body > * {
+  background-color: #eeeeee;
+}
+.component {
+  display: flex;
+  flex-direction: column;
+
+}
+
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.container-fluid {
+  width: 100%;
+}
+
+.container {
+  max-width: var(--site-max-width);
+  margin: auto;
+}
+
+section {
+  background: rgba(63, 81, 181, 0.7);
+  outline-color: rgb(63,81,181);
+}
+
+.component {
+  background: rgba(165, 214, 167, 0.7);
+  outline-color: #a5d6a7;
+}
+
+.component > * {
+  background: rgba(255, 245, 157, 0.7);
+  outline-color: #fff59d;
 }
