--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,11 @@
+@import 'test_mode';
+:root {
+  --site-color-background: #050505;
+  --site-color-text: #FFFFFF;
+  --site-font-size: 16px;
+  --site-max-width: 1680px;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -5,25 +13,10 @@
 html, body  {
   margin: 0;
   padding: 0;
-
-  --site-max-width: 1680px;
+  //background-color: var(--site-color-background);
+  //color: var(--site-color-text);
+  //font-size: var(--site-font-size);
 }
-
-/**
-TODO: remove these css
- */
-body * {
-  outline: 1px solid #9e9e9e;
-}
-body > * {
-  background-color: #eeeeee;
-}
-.component {
-  display: flex;
-  flex-direction: column;
-
-}
-
 
 .row {
   display: flex;
@@ -39,17 +32,19 @@ body > * {
   margin: auto;
 }
 
-section {
-  background: rgba(63, 81, 181, 0.7);
-  outline-color: rgb(63,81,181);
+nav {
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
 }
 
-.component {
-  background: rgba(165, 214, 167, 0.7);
-  outline-color: #a5d6a7;
+.text-center {
+  text-align: center;
 }
 
-.component > * {
-  background: rgba(255, 245, 157, 0.7);
-  outline-color: #fff59d;
+.justify-content-center {
+  justify-content: center;
 }
