--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,13 @@
-@import 'test_mode';
+@import 'utils';
 :root {
   --site-color-background: #050505;
   --site-color-text: #FFFFFF;
+  --site-font-family: 'Inter', sans-serif;
   --site-font-size: 16px;
   --site-max-width: 1680px;
+  --color-primary: #2E4FFF;
+  --color-secondary: #FF005C;
+  --color-tertiary: #FFC700;
 }
 
 * {
@@ -13,10 +17,23 @@
 html, body  {
   margin: 0;
   padding: 0;
-  //background-color: var(--site-color-background);
-  //color: var(--site-color-text);
-  //font-size: var(--site-font-size);
+  color: var(--site-color-text);
+  font-style: normal;
+  font-size: var(--site-font-size);
+  font-family: var(--site-font-family);
+  background-color: var(--site-color-background);
 }
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+@import 'typography';
+@import 'components/buttons';
+@import 'components/menu';
+@import 'components/logo';
+@import 'components/card_course';
 
 .row {
   display: flex;
@@ -45,6 +62,61 @@ nav {
   text-align: center;
 }
 
+.position-relative {
+  position: relative;
+}
+
 .justify-content-center {
   justify-content: center;
+}
+
+.justify-content-end {
+  justify-content: end;
+}
+
+/**
+TODO: mixin for this kak
+ */
+.color-text-primary {
+  color: var(--color-primary);
+}
+
+.color-text-secondary {
+  color: var(--color-secondary);
+}
+
+.color-text-tertiary {
+  color: var(--color-tertiary);
+}
+
+.color-text-muted {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.color-text-dark {
+  color: #050505;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+#section-hero {
+  //background: linear-gradient(90.28deg, #030303 0.22%, rgba(3, 3, 3, 0.44) 71.85%), url(/images/hero.png), #C4C4C4;
+  background: linear-gradient(90.28deg, #030303 0.22%, rgba(3, 3, 3, 0.44) 71.85%), #C4C4C4;
+  position: relative;
+}
+
+#section-courses {
+  background: linear-gradient(102.68deg, #112EC5 -0.28%, #D92057 126.51%);
+}
+
+#section-playlists {
+  background-color: white;
 }
