--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -2,9 +2,9 @@
 /**
 TODO: use rem where possible
  */
-button {
+.button {
   outline: none;
-  padding: 16px 40px;
+  padding: 1rem 2.5rem;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -23,5 +23,9 @@ button {
   &.outline {
     background: none;
     border-color: rgba(255, 255, 255, 0.4);
+  }
+
+  &.size-small {
+    padding: 0.6875rem 1.375rem;
   }
 }
