--- a/src/styles/components/_card_course.scss
+++ b/src/styles/components/_card_course.scss
@@ -1,6 +1,34 @@
+@import '../utils';
+
 /**
 TODO: maybe https://codepen.io/heyitsolivia/pen/EICDK
  */
 .card.course {
-  max-width: 420px;
+  // TODO: this below
+  //background: linear-gradient(0deg, rgba(22, 26, 37, 0.6) 0%, rgba(22, 26, 37, 0) 50%), url(.jpg), #FFFFFF;
+  //border-radius: 16px;
+  @include vendorPrefix('border-radius', '16px');
+  // TODO: vendor prefix for this
+  filter: drop-shadow(0px 12px 36px rgba(0, 0, 0, 0.25));
+
+  .text-content {
+    padding: 1.875rem;
+    >:first-child {
+      margin-bottom: 0.5rem;
+    }
+  }
+
+  .cta {
+    position: absolute;
+    padding: 1.875rem;
+    top: 0;
+    right: 0;
+    border: none;
+    background: none;
+
+    &:hover svg rect {
+      fill: var(--color-secondary);
+    }
+  }
+
 }
