--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: row;
   flex-grow: 1;
+  align-items: center;
 
   img {
     height: 40px;
     width: 40px;
+    margin-right: 1rem;
   }
 }
