--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -1,14 +1,56 @@
 nav.menu {
 
+  .toggle {
+    display: none;
+    /** TODO mixin for tablet*/
+  }
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+
+    li:not(:first-child) {
+      margin-left: 2rem;
+    }
+  }
+
   a {
     text-decoration: none;
 
     &:hover, &:focus {
-      text-decoration: underline;
+      color: var(--color-secondary);
     }
 
     &, &:visited {
       color: inherit;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .toggle {
+      display: block;
+    }
+
+    &:not(.show) ul{
+      display: none;
+    }
+
+    &.show ul {
+      position: absolute;
+      top: 72px;
+      right: 0;
+      z-index: 1;
+      width: 100vw;
+      padding: 1rem;
+      flex-direction: column;
+      background-color: #111111;
+
+      li {
+        margin: 1rem;
+      }
     }
   }
 
