--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,13 +1,19 @@
 @import 'utils';
+$siteMaxWidth: 1380px;
+
 :root {
   --site-color-background: #050505;
   --site-color-text: #FFFFFF;
   --site-font-family: 'Inter', sans-serif;
   --site-font-size: 16px;
-  --site-max-width: 1680px;
+  --site-max-width: #{$siteMaxWidth};
   --color-primary: #2E4FFF;
   --color-secondary: #FF005C;
   --color-tertiary: #FFC700;
+
+  @media (max-width: #{$siteMaxWidth - 1}) {
+    --site-max-width-inner: 96%;
+  }
 }
 
 * {
@@ -24,9 +30,20 @@ html, body  {
   background-color: var(--site-color-background);
 }
 
+body.blur {
+  overflow: hidden;
+  main {
+    filter: blur(12px);
+  }
+}
+
 img {
   max-width: 100%;
   max-height: 100%;
+}
+
+main {
+  @include vendorPrefix('transition', filter 0.3s ease);
 }
 
 @import 'typography';
@@ -40,21 +57,37 @@ img {
   flex-direction: row;
 }
 
-.container-fluid {
-  width: 100%;
-}
-
 .container {
+  width: 100%;
   max-width: var(--site-max-width);
   margin: auto;
+
+  @media (max-width: 1379px) {
+    padding: 0 1rem;
+  }
 }
 
-nav {
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+.card-columns {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+
+  @include for-tablet-and-up {
+    margin-left: -1.375rem;
+    margin-right: -1.375rem;
+  }
+
+  > * {
+    @include flex(0, 0, 100%);
+
+    @include for-tablet-and-up {
+      @include flex(0, 0, 33.333333%);
+      padding: 0 1.375rem;
+    }
+  }
+
+  > *:not(:last-child) {
+    margin-bottom: 2.75rem;
   }
 }
 
@@ -107,16 +140,124 @@ TODO: mixin for this kak
   flex-direction: column;
 }
 
+.cta {
+  cursor: pointer;
+}
+
 #section-hero {
-  //background: linear-gradient(90.28deg, #030303 0.22%, rgba(3, 3, 3, 0.44) 71.85%), url(/images/hero.png), #C4C4C4;
-  background: linear-gradient(90.28deg, #030303 0.22%, rgba(3, 3, 3, 0.44) 71.85%), #C4C4C4;
+  background-image: url('/images/bg-hero-compressed.png');
   position: relative;
+  height: 80vh;
+  max-height: 700px;
+  display: flex;
+  text-align: center;
+
+  h5 {
+    margin-bottom: 1.25rem;
+  }
+
+  h1 {
+    margin-bottom: 2.75rem;
+  }
+
+  .row.buttons {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  button {
+    margin: 0 1.25rem 1.25rem 0;
+  }
+
+  @include for-mobile-m-and-up {
+    text-align: left;
+    .row.buttons {
+      justify-content: flex-start;
+    }
+  }
 }
 
 #section-courses {
   background: linear-gradient(102.68deg, #112EC5 -0.28%, #D92057 126.51%);
+  padding: 2rem 0;
+
+  .row.card-columns {
+    @include for-tablet-and-up {
+      margin-top: -8rem;
+    }
+  }
+
+  .testimonial {
+    padding: 2rem 0;
+    margin-top: 5rem;
+
+    @include for-tablet-and-up {
+      padding: 7.5rem 0 11.25rem;
+      margin-top: 0;
+    }
+  }
 }
 
 #section-playlists {
   background-color: white;
+  padding: 2rem 0;
+
+  @include for-tablet-and-up {
+    padding: 9.375rem 0;
+  }
+
+  h5, .card > *:not(:last-child) {
+    margin-bottom: 1rem;
+  }
 }
+
+.bg-overlay {
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#section-subscribe {
+  background: url(/images/bg-getting-started.png);
+  color: #fff;
+  padding: 5.5rem;
+  display: flex;
+
+  @media (max-width: 768px) {
+    padding: 3rem;
+  }
+
+  @media (max-width: 320px) {
+    padding: 2rem 0;
+    min-height: 372px;
+  }
+
+  h5 {
+    margin-bottom: 1.25rem;
+  }
+
+  h1 {
+    margin-bottom: 2.5rem;
+  }
+}
+
+/**
+TODO remove unnecessary styles
+ */
+
+.padding-large-vertical {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+
+  @media (max-width: 768px) {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+}
+
+.padding-vertical {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+@import 'components/testimonial';
