--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -10,6 +10,21 @@
   max-width: $basis;
 }
 
+@mixin keyframes($name) {
+  @-webkit-keyframes #{$name} {
+    @content;
+  }
+  @-moz-keyframes #{$name} {
+    @content;
+  }
+  @-ms-keyframes #{$name} {
+    @content;
+  }
+  @keyframes #{$name} {
+    @content;
+  }
+}
+
 @mixin for-tablet-and-up {
   @media (min-width: 768px) { @content; }
 }
