Shapes, Responsiveness Checks, Modal

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -259,5 +259,7 @@ TODO remove unnecessary styles
   padding-bottom: 1rem;
 }
 
-@import 'components/testimonial';
 @import 'animations';
+@import 'components/testimonial';
+@import 'components/modal';
+@import 'components/card_playlist';
