--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -43,3 +43,40 @@ $delays: 1, 2, 3, 4;
 .animate.fade-in-from-left {
   @include vendorPrefix(animation-name, fadeInFromLeft);
 }
+
+@include keyframes(nahUh) {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0)
+  }
+
+  6.5% {
+    -webkit-transform: translateX(-6px) rotateY(-9deg);
+    transform: translateX(-6px) rotateY(-9deg)
+  }
+
+  18.5% {
+    -webkit-transform: translateX(5px) rotateY(7deg);
+    transform: translateX(5px) rotateY(7deg)
+  }
+
+  31.5% {
+    -webkit-transform: translateX(-3px) rotateY(-5deg);
+    transform: translateX(-3px) rotateY(-5deg)
+  }
+
+  43.5% {
+    -webkit-transform: translateX(2px) rotateY(3deg);
+    transform: translateX(2px) rotateY(3deg)
+  }
+
+  50% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0)
+  }
+}
+
+.animate.shake {
+  @include vendorPrefix('animation-name', nahUh);
+  @include vendorPrefix('animation-timing-function', ease-in-out);
+}
