--- a/src/styles/components/_card_course.scss
+++ b/src/styles/components/_card_course.scss
@@ -8,6 +8,10 @@ TODO: maybe https://codepen.io/heyitsolivia/pen/EICDK
   @include vendorPrefix(filter, drop-shadow(0px 12px 36px rgba(0, 0, 0, 0.25)));
   perspective: 1000px;
 
+  img {
+    width: 100%;
+  }
+
   .inner, .front, .back {
     width: 100%;
     height: 500px;
@@ -32,11 +36,47 @@ TODO: maybe https://codepen.io/heyitsolivia/pen/EICDK
   .front {
     z-index: 2;
     transform: rotateY(0deg);
+    clip-path: polygon(0% 0%, 100% 0, 100% 90%, 88% 100%, 0% 100%);
+
+    .text-content {
+      background: linear-gradient(0deg, rgba(22, 26, 37, 0.6) 0%, rgba(22, 26, 37, 0) 50%), linear-gradient(0deg, transparent, transparent);
+    }
   }
 
   .back {
     background: white;
     transform: rotateY(180deg);
+
+    .text-content {
+
+      .title {
+        margin-bottom: 1.5rem;
+      }
+
+      p {
+        font-size: 1.125rem;
+        line-height: 1.6875rem;
+        margin-bottom: 1rem;
+      }
+
+      table {
+        $border: 1px solid rgba(196, 196, 196, 30%);
+        width: 100%;
+        border-collapse: collapse;
+        font-size: 1.125rem;
+        border-bottom: $border;
+
+        td {
+          border-top: $border;
+          padding: 1rem 0;
+
+          &:last-child {
+            text-align: right;
+          }
+        }
+
+      }
+    }
   }
 
   .text-content {
