--- a/src/styles/components/_card_course.scss
+++ b/src/styles/components/_card_course.scss
@@ -11,7 +11,7 @@
 
   .inner, .front, .back {
     width: 100%;
-    height: 500px;
+    height: 480px;
   }
 
   .inner {
@@ -51,9 +51,16 @@
       }
 
       p {
-        font-size: 1.125rem;
         line-height: 1.6875rem;
         margin-bottom: 1rem;
+      }
+
+      p, table {
+        font-size: 1rem;
+
+        @include for-tablet-and-up{
+          font-size: 1.125rem;
+        }
       }
 
       table {
